FrontEnd/style.css
/* *, *:before, *:after {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
} */

@font-face{
  font-family: "tfont";
  src: url("GothamRounded-Book.otf") format("opentype");
}

body {
  overflow: hidden;
  height:99vh;
  font-family: tfont;
  background-color: rgb(20, 20, 20);
  color: white;
}

.loader {
  border: 16px solid #f3f3f3;
  border-radius: 50%;
  border-top: 16px solid #3498db;
  width: 120px;
  height: 120px;
  -webkit-animation: spin 2s linear infinite; /* Safari */
  animation: spin 2s linear infinite;
  position: absolute;
  margin-left: auto;
  margin-top: auto;
  margin-bottom: auto;
  margin-right: auto;
  left: 0;
  top: 0;
  bottom: 0;
  right: 0;
  text-align: center;
  display: none;
}

/* Safari */
@-webkit-keyframes spin {
  0% { -webkit-transform: rotate(0deg); }
  100% { -webkit-transform: rotate(360deg); }
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

.nav-item{
  cursor: pointer;
}

.outer {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 80vh;
}

.outerbtn {
  margin-bottom: 30px;
}

.btn {
  outline: none !important;
  box-shadow: none !important;
}

@media only screen and (max-width: 600px) {
  .outer {
    margin-top: 20px;
    display: block;
    }

    .desktop {
      display: none;
  }

  .body{
    overflow: scroll;
  }
}

.hidden{
  display: none;
}

